--- a/views/event_table.ejs
+++ b/views/event_table.ejs
@@ -43,7 +43,7 @@
         <td class="project-actions" style="">
             <span style="font-size: 24px;">R$<%- parties[i].totalValue %></span><br>
             <span style="font-size: initial;"><i class="fa fa-users" style="margin-right: 10px;">
-                </i><%- (parties[i].contribuitions ? parties[i].contribuitions.length : 0) %>
+                </i><%- (parties[i].users ? parties[i].users.length : 0) %>
                     /<%- parties[i].capacity %>
             </span>
         </td>
