--- a/views/layout_start.ejs
+++ b/views/layout_start.ejs
@@ -12,6 +12,8 @@
     <link href="/css/awesome-bootstrap-checkbox.css" rel="stylesheet">
     <link href="/css/build.css" rel="stylesheet">
     <link href="/css/font-awesome.css" rel="stylesheet">
+    <link href="/css/plugins/ionRangeSlider/ion.rangeSlider.css" rel="stylesheet">
+    <link href="/css/plugins/ionRangeSlider/ion.rangeSlider.skinHTML5.css" rel="stylesheet">
 
     <link href="/css/style.css" rel="stylesheet">
     <link href="/css/plugins/chosen/bootstrap-chosen.css" rel="stylesheet">
@@ -63,6 +65,7 @@
 
     <script src="/depedentSelect.js"></script>
     <script src="/jquery-mask-plugin/dist/jquery.mask.js"></script>
+    <script src="/js/plugins/ionRangeSlider/ion.rangeSlider.min.js"></script>
 
     <title>GoTo</title>
     <style>
