--- a/views/company_details.ejs
+++ b/views/company_details.ejs
@@ -8,7 +8,7 @@
                     <div class="ibox">
                         <div class="ibox-title">
                             <h5>Local</h5>
-                            <a class="btn btn-primary pull-right btn-sm" href="/site/event/new?companyId=58a88bdb14a9e43b3cf33af2">Adicionar Evento</a>
+                            <a class="btn btn-primary pull-right btn-sm" href="/site/event/new?companyId=<%= company._id %>">Adicionar Evento</a>
                         </div>
                         <div class="ibox-content">
                             <div class="project-list" style="font-size: 14px">
