--- a/views/layout_start.ejs
+++ b/views/layout_start.ejs
@@ -213,7 +213,7 @@
                 </li>
                 <li>
                     <a href="">
-                        <i class="fa fa-map-marker"></i> Campina Grande, PB
+                        <i class="fa fa-map-marker"></i> <%- user.city ? user.city.nome : ''%>
                     </a>
                 </li>
                 <li>
