--- a/views/new_event.ejs
+++ b/views/new_event.ejs
@@ -105,10 +105,12 @@
 
 <style>
     .selected{
-        background-color: #3d4d5d;
+        background-color: #1AB394;
+        color: white;
     }
     .selected:hover{
-        background-color: #3d4d5d !important;
+        background-color: #1AB394 !important;
+        color: white;
     }
 </style>
 
