--- a/views/event_details.ejs
+++ b/views/event_details.ejs
@@ -80,12 +80,11 @@
                                     <%if (party.contrybuitons) { %>
                                         <table class="table table-striped table-hover">
                                             <tbody>
-                                            <% for (var i = 0; i < party.contribuitons.length; i++) { %>
+                                            <% for (var i = 0; i < party.users.length; i++) { %>
                                             <tr>
                                                 <td class="client-avatar"><img alt="image" src="/a2.jpg"></td>
                                                 <td><a data-toggle="tab" href="#contact-1" class="client-link"
-                                                       aria-expanded="true"><%- party.contribuitons[i].user.name %></a></td>
-                                                <td> R$<%- party.contribuitons[i].value %></td>
+                                                       aria-expanded="true"><%- party.users[i].name %></a></td>
                                             </tr>
                                             <%}%>
                                             </tbody>
