--- a/views/home.ejs
+++ b/views/home.ejs
@@ -39,7 +39,7 @@
                                         <% for (var i = 0; i < companies.length; i++) { %>
                                         <tr>
                                             <td class="project-status">
-                                            <span href="#"><img alt="image" src="/mc.png" class="img-circle"
+                                            <span href="#"><img alt="image" src="/ic_company.png" class="img-circle"
                                                                 style="width: 90px; height: 90px;"/></span>
                                             </td>
                                             <td class="project-title" style="max-width: 360px;">
