--- a/views/account.ejs
+++ b/views/account.ejs
@@ -30,14 +30,14 @@
                                 </div>
                                 <div class="ibox-content">
 
-                                    <a href="add_card.html">+ Adicionar fundos a sua carteira</a>
+                                    <a href="account/founds">+ Adicionar fundos a sua carteira</a>
 
                                     <div style="margin-top: 10px">
                                         <div class="col-md-1 no-padding" style="margin-top: 10px;">
                                             <h3>Carteira</h3>
                                         </div>
                                         <div class="col-md-6">
-                                            <h1>R$120,00</h1>
+                                            <h1>R$ <%- user.walletBalance %></h1>
                                         </div>
                                     </div>
 
