--- a/views/account.ejs
+++ b/views/account.ejs
@@ -13,7 +13,7 @@
                                 </div>
                                 <div class="ibox-content">
                                     <form role="form">
-                                        <div class="form-group"><label>Nome</label> <input type="email" placeholder="Nome completo" class="form-control" value="<%- user.name %>"></div>
+                                        <div class="form-group"><label>Nome</label> <input type="text" placeholder="Nome completo" class="form-control" value="<%- user.name %>"></div>
                                         <div class="form-group"><label>Email</label> <input type="email" placeholder="Email" class="form-control" value="<%- user.email %>"></div>
                                         <div class="form-group"><label>Senha</label> <input type="password" placeholder="Senha" class="form-control"></div>
                                         <div class="form-group"><label>Confirmar senha</label> <input type="password" placeholder="Confirmar senha" class="form-control"></div>
